fixing findbugs warnings - using valueOf instead of newing Int and Long
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@17388 7fc7bbf3-cf45-46d4-be06-341739edd864