@@ -85,7 +85,7 @@ class JJTExpressionParserState {
   }
 
   void openNodeScope(Node n) {
-    marks.push(new Integer(mk));
+    marks.push(Integer.valueOf(mk));
     mk = sp;
     n.jjtOpen();
   }
